# image_processing_automation

./: .gitignore  README.md  looks.yaml  main.py  pyproject.toml
src/yatzar/: __main__.py  batching.py  config.py  gif.py  io_utils.py  ops.py  processing.py  progress.py
src/yatzar/cli/: app.py  apply_cmd.py  gif_cmd.py  looks_cmd.py
src/yatzar/data/looks/: cinestill_800t.yaml  engraving.yaml  film_heavy.yaml  film_soft.yaml  fujifilm_eterna.yaml  fujifilm_velvia.yaml  gazette.yaml  gazette_halftone.yaml  kodak_5247.yaml  kodak_ektachrome.yaml  kodak_portra.yaml  kodak_tri_x_400.yaml  kodak_vision3_2383_print.yaml  kodak_vision3_5219.yaml  tri_x_pushed.yaml
src/yatzar/looks/: __init__.py  engraving.py  gazette.py  gazette_halftone.py  standard.py  tri_x.py
tests/: test_batching.py  test_cli.py  test_config.py  test_io_utils.py  test_ops.py
