[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yatzar"
version = "0.2.0"
description = "CLI-Pipeline für konfigurierbare, ästhetische Bild-Looks mit paralleler Batch-Verarbeitung"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyyaml>=6.0.3",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yatzar = "yatzar.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yatzar"]

[tool.bumpversion]
current_version = "0.2.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
